--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,32 @@
 /*nav*/
 .nav {
   display: flex;
-  width: 100vw;
-  height: 100px;
+  width: 100%;
+  height: 80px;
+  background-color: #000;
+  justify-content: space-between;
+  h1 {
+    color: #fff;
+  }
   input {
     width: 1000px;
     padding: 10px;
+  }
+}
+
+/*swiperWapper*/
+
+.swiperWapper {
+  width: 100%;
+  height: 100%;
+  .swiperSlide {
+    width: 100%;
+    height: 1500px;
+    .bg_black {
+      width: 60%;
+      height: 1500px;
+      background-color: black;
+    }
   }
 }
 
