--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@
   height: 100%;
   .swiperSlide {
     width: 100%;
-    height: 1500px;
+    height: 1200px;
     .bg_black {
       width: 60%;
       height: 1500px;
@@ -41,19 +41,95 @@
   align-items: center;
   gap: 20px;
   list-style: none;
-  li {
-    border-radius: 5px;
-    border: 2px solid #000;
+
+  .movieCard {
+    position: relative; // 부모에 position 을 주면 자식에서 영향을 받는다
+    overflow: hidden; // 부모 영역을 벗어나지 않도록 잘라준다 마치 마스크 씌운 것처럼
+    width: 250px;
+    height: 360px;
+
     img {
-      width: 250px;
-      height: 350px;
+      display: block; // 이미지에 여백이 생기는 것을 방지
+      width: 100%; // 이미지를 movieCard에 꽉 차게 채워줌
+      height: 100%; // 이미지의 사이즈가 다 달라서 고정
+      border-radius: 5px;
     }
 
     .movieInfo {
-      height: 80px;
+      position: absolute; // 위치 고정
+      top: 0;
+      left: 0; // 위치를 주지 않으면 붕 떠버려서 보이지 않음
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8); /* 어두운 배경 */
+      color: #fff;
       display: flex;
       flex-direction: column;
-      padding: 10px;
+      justify-content: center;
+      gap: 10px;
+      align-items: center;
+      opacity: 0; // 처음엔 안 보이게 숨김
+      transition: opacity 0.3s ease-in-out; // 천천히 나타나고 사라지게 부드러운 효과 적용
+
+      // h3 {
+      //   font-size: 18px;
+      //   text-align: center;
+      //   overflow: hidden; /* 넘치는 텍스트 숨기기 */
+      //   text-overflow: ellipsis; /* 넘치면 말줄임표(...) */
+      //   display: -webkit-box; /* 유연한 박스 설정 */
+      //   -webkit-line-clamp: 2; /* 최대 2줄까지만 표시 */
+      //   -webkit-box-orient: vertical; /* 세로 방향 정렬 */
+      //   line-height: 1.4; /* 줄 간격 조절 */
+      //   max-height: calc(1.4em * 2); /* 2줄 높이에 맞게 제한 */
+      // }
     }
+
+    &:hover .movieInfo {
+      opacity: 1; // 부드럽게 등장
+    }
+  }
+}
+
+/*MovieDetail*/
+
+.detailContainer {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+
+  // .bgImg {
+  //   position: absolute;
+  //   top: 0px;
+  //   left: 0px;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-size: cover;
+  //   background-position: center;
+  //   filter: blur(8px); /* 흐리게 */
+  //   z-index: -2;
+  // }
+
+  // .bgImg::after {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background: linear-gradient(
+  //     to bottom,
+  //     rgba(0, 0, 0, 0) 30%,
+  //     rgba(0, 0, 0, 1) 100%
+  //   );
+  //   z-index: -1;
+  // }
+
+  .detailContent {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 }
