--- a/src/App.scss
+++ b/src/App.scss
@@ -99,32 +99,32 @@
   overflow: hidden;
   display: flex;
 
-  // .bgImg {
-  //   position: absolute;
-  //   top: 0px;
-  //   left: 0px;
-  //   width: 100%;
-  //   height: 100%;
-  //   background-size: cover;
-  //   background-position: center;
-  //   filter: blur(8px); /* 흐리게 */
-  //   z-index: -2;
-  // }
+  .bgImg {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    filter: blur(8px); /* 흐리게 */
+    z-index: -2;
+  }
 
-  // .bgImg::after {
-  //   content: '';
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background: linear-gradient(
-  //     to bottom,
-  //     rgba(0, 0, 0, 0) 30%,
-  //     rgba(0, 0, 0, 1) 100%
-  //   );
-  //   z-index: -1;
-  // }
+  .bgImg::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 30%,
+      rgba(0, 0, 0, 1) 100%
+    );
+    z-index: -1;
+  }
 
   .detailContent {
     display: flex;
