--- a/src/component/scss/navbar.scss
+++ b/src/component/scss/navbar.scss
@@ -1,19 +1,66 @@
 /*nav*/
 .nav {
-  display: flex;
   width: 100%;
   height: 60px;
-  background-color: #000;
-  justify-content: space-between;
-  h1 {
-    color: #fff;
-    &:hover {
-      cursor: pointer;
-    }
-  }
+  background-color: #252525;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .nav_container {
+    display: flex;
+    width: 80%;
+    height: 50px;
+    align-items: center;
+    justify-content: space-between;
+    .home {
+      color: #fff;
+      &:hover {
+        cursor: pointer;
+      }
 
-  input {
-    width: 1000px;
-    padding: 10px;
+      font-size: 20px;
+    }
+
+    input {
+      width: 1000px;
+      padding: 10px;
+      border-radius: 5px;
+      &:focus {
+        border: 3px solid;
+        border-color: rgb(255, 202, 211);
+        outline: none;
+      }
+    }
+
+    .btns {
+      display: flex;
+      width: 8vw;
+      height: 35px;
+      justify-content: space-between;
+
+      .btn {
+        width: 70px;
+        border-radius: 3px;
+        border: none;
+        background-color: #252525;
+        color: #fff;
+        border: 1px solid #fff;
+      }
+    }
+    .login_btn {
+      &:hover {
+        cursor: pointer;
+        background-color: #f9f9f9;
+        color: black;
+      }
+    }
+
+    .signup_btn {
+      &:hover {
+        cursor: pointer;
+        background-color: #f9f9f9;
+        color: black;
+      }
+    }
   }
 }
