--- a/src/component/scss/signUp.scss
+++ b/src/component/scss/signUp.scss
@@ -1,9 +1,17 @@
 /* 부모 컨테이너 스타일 */
+.sign_up_section {
+  width: 100%;
+  height: 100%;
+  background-color: #f9f9f9;
+  padding: 20px;
+}
+
 .sign_up_container {
   max-width: 500px;
   margin: 50px auto;
   padding: 30px;
   background-color: #fff;
+
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
